Fix MCP server CORS and host binding for Cloud Run

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -9,20 +9,20 @@
     "dev": "tsx watch src/server.ts",
     "build": "npm run build:apps && npm run build:server",
     "build:apps": "npm run build:weather && npm run build:calculator && npm run build:map && npm run build:threejs && npm run build:pdf && npm run build:shadertoy && npm run build:sheet-music && npm run build:wiki && npm run build:budget && npm run build:system-monitor && npm run build:transcript && npm run build:cohort-heatmap && npm run build:scenario-modeler && npm run build:customer-segmentation",
-    "build:weather": "set APP_NAME=weather&& vite build",
-    "build:calculator": "set APP_NAME=calculator&& vite build",
-    "build:map": "set APP_NAME=map&& vite build",
-    "build:threejs": "set APP_NAME=threejs&& vite build",
-    "build:pdf": "set APP_NAME=pdf&& vite build",
-    "build:shadertoy": "set APP_NAME=shadertoy&& vite build",
-    "build:sheet-music": "set APP_NAME=sheet-music&& vite build",
-    "build:wiki": "set APP_NAME=wiki&& vite build",
-    "build:budget": "set APP_NAME=budget&& vite build",
-    "build:system-monitor": "set APP_NAME=system-monitor&& vite build",
-    "build:transcript": "set APP_NAME=transcript&& vite build",
-    "build:cohort-heatmap": "set APP_NAME=cohort-heatmap&& vite build",
-    "build:scenario-modeler": "set APP_NAME=scenario-modeler&& vite build",
-    "build:customer-segmentation": "set APP_NAME=customer-segmentation&& vite build",
+    "build:weather": "APP_NAME=weather vite build",
+    "build:calculator": "APP_NAME=calculator vite build",
+    "build:map": "APP_NAME=map vite build",
+    "build:threejs": "APP_NAME=threejs vite build",
+    "build:pdf": "APP_NAME=pdf vite build",
+    "build:shadertoy": "APP_NAME=shadertoy vite build",
+    "build:sheet-music": "APP_NAME=sheet-music vite build",
+    "build:wiki": "APP_NAME=wiki vite build",
+    "build:budget": "APP_NAME=budget vite build",
+    "build:system-monitor": "APP_NAME=system-monitor vite build",
+    "build:transcript": "APP_NAME=transcript vite build",
+    "build:cohort-heatmap": "APP_NAME=cohort-heatmap vite build",
+    "build:scenario-modeler": "APP_NAME=scenario-modeler vite build",
+    "build:customer-segmentation": "APP_NAME=customer-segmentation vite build",
     "build:server": "tsc",
     "legacy": "node index.js"
   },
